Contenst  Line 비교 2차 수정